<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/exo_player_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/exoplayer_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/exo_player_height"
            app:resize_mode="fill" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/thumbnail_image_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/thumbnail_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/exo_player_height"
            android:scaleType="fitXY" />
    </FrameLayout>

    <TextView
        android:id="@+id/step_detail_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/exo_player_container"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/step_Detail_top_margin"
        android:hint="@string/step_hint"
        android:textAlignment="center"
        android:textStyle="bold" />


</RelativeLayout>